--- a/r_best-practices.html
+++ b/r_best-practices.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-21 Tue 08:15 -->
+<!-- 2018-08-23 Thu 16:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Tips on best practices in R</title>
@@ -370,6 +370,38 @@
     /* border-radius: 5px; */
     /* font-size: 95%; */
   }
+  div[class="RED"] {	/*for block with monospace font*/
+    /* font-family: 'Anonymous Pro'; */
+    /* font-family: 'Roboto Slab Thin'; */
+    /* margin: auto; */
+    /* width: max-content; */
+    /* color: #a52a2a; */
+    /* font-weight: bold; */
+    /* font-style: italic; */
+    padding: 0.1em 0.8em;
+    /* font-size: 95%; */
+    /* line-height: 20px; */
+    /* margin: 0 0 0 5px; */
+    /* border: 0.5pt solid #d9d9d9; */
+    /* border-radius: 5px; */
+    /* font-size: 95%; */
+    /* padding: 0em 1em; */
+    /* margin: 0.7em 0 0 0; */
+    background-color: #f5deb3;
+    /* border: 0.5pt solid #d9d9d9; */
+    /* border-radius: 5px; */
+    /* max-height: 0; */
+    /* overflow: hidden; */
+    /* transition: max-height 0.2s ease-out; */
+    /* background-color: #f1f1f1; */
+    color: #262626;
+    /* padding: 0.8em; */
+    font-size: 92%;
+    /* line-height: 22px; */
+    /* border: 0.5pt solid #d9d9d9; */
+    border-radius: 5px;
+    box-shadow: 0pt 0pt 0pt #eee8d5;
+  }
   div[class="VERBATIM"] {	/*for block verbatim*/
     /* background-color: #f4faff; */
     line-height: 27px;
@@ -505,7 +537,7 @@
     border-radius: 0.2em;
     background-color: #859900;
   }
-  
+
   /* TOC inspired by http://jashkenas.github.com/coffee-script */
   #table-of-contents {
     font-size: 10pt;
@@ -614,7 +646,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:16px"><b>Marie-Hélène Burle</b><br>August 21, 2018</span>
+<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="/home/marie/.goldendict/favicons/email.ico" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="/home/marie/.goldendict/favicons/twitter.ico" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="/home/marie/.goldendict/favicons/gh.ico" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
 </div>
 <div id="content">
 <h1 class="title">Tips on best practices in R</h1>
@@ -622,28 +654,28 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgfdc5468">Self-contained projects</a>
+<li><a href="#orga5ef450">Self-contained projects</a>
 <ul>
-<li><a href="#orgff49846">Example possible project structure</a></li>
+<li><a href="#org194d180">Example possible project structure</a></li>
 </ul>
 </li>
-<li><a href="#orgc7e4d9c">Paths</a>
+<li><a href="#org4d77298">Paths</a>
 <ul>
-<li><a href="#orgb1df115">The problem with absolute paths</a></li>
-<li><a href="#org4b902cb">Solution: use paths relative to your project root</a></li>
-<li><a href="#orga674cd7">Package <code class="src src-R">here</code></a></li>
+<li><a href="#org7265770">The problem with absolute paths</a></li>
+<li><a href="#org2ce5796">Solution: use paths relative to your project root</a></li>
+<li><a href="#orgb9c531c">Package <code class="src src-R">here</code></a></li>
 </ul>
 </li>
-<li><a href="#org1158aec">Clean session</a></li>
-<li><a href="#org765d5cb">Formatting</a></li>
-<li><a href="#org3bf1837">Things you do not want in a script</a></li>
+<li><a href="#org1813137">Clean session</a></li>
+<li><a href="#org301a4b3">Formatting</a></li>
+<li><a href="#org528ec79">Things you do not want in a script</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgfdc5468" class="outline-2">
-<h2 id="orgfdc5468">Self-contained projects</h2>
-<div class="outline-text-2" id="text-orgfdc5468">
+<div id="outline-container-orga5ef450" class="outline-2">
+<h2 id="orga5ef450">Self-contained projects</h2>
+<div class="outline-text-2" id="text-orga5ef450">
 <div class="VERBATIM">
 <p>
 Work in self-contained projects<br />
@@ -677,9 +709,9 @@ If you use RStudio, create RStudio projects.<br />
 </p>
 </div>
 
-<div id="outline-container-orgff49846" class="outline-3">
-<h3 id="orgff49846">Example possible project structure</h3>
-<div class="outline-text-3" id="text-orgff49846">
+<div id="outline-container-org194d180" class="outline-3">
+<h3 id="org194d180">Example possible project structure</h3>
+<div class="outline-text-3" id="text-org194d180">
 <p>
 This would be a rather standard project structure:<br />
 </p>
@@ -704,13 +736,13 @@ You are free to organize your projects in a way that works for you. But followin
 </div>
 </div>
 
-<div id="outline-container-orgc7e4d9c" class="outline-2">
-<h2 id="orgc7e4d9c">Paths</h2>
-<div class="outline-text-2" id="text-orgc7e4d9c">
+<div id="outline-container-org4d77298" class="outline-2">
+<h2 id="org4d77298">Paths</h2>
+<div class="outline-text-2" id="text-org4d77298">
 </div>
-<div id="outline-container-orgb1df115" class="outline-3">
-<h3 id="orgb1df115">The problem with absolute paths</h3>
-<div class="outline-text-3" id="text-orgb1df115">
+<div id="outline-container-org7265770" class="outline-3">
+<h3 id="org7265770">The problem with absolute paths</h3>
+<div class="outline-text-3" id="text-org7265770">
 <p>
 If this is how your script starts:<br />
 </p>
@@ -749,9 +781,9 @@ If you move your project to another machine, the links will equally get broken. 
 </div>
 </div>
 
-<div id="outline-container-org4b902cb" class="outline-3">
-<h3 id="org4b902cb">Solution: use paths relative to your project root</h3>
-<div class="outline-text-3" id="text-org4b902cb">
+<div id="outline-container-org2ce5796" class="outline-3">
+<h3 id="org2ce5796">Solution: use paths relative to your project root</h3>
+<div class="outline-text-3" id="text-org2ce5796">
 <p>
 <b>Once your entire project lives within one directory</b> (the project root), as we saw in the previous section, make sure that:<br />
 </p>
@@ -793,9 +825,9 @@ How?<br />
 </div>
 </div>
 
-<div id="outline-container-orga674cd7" class="outline-3">
-<h3 id="orga674cd7">Package <code class="src src-R">here</code></h3>
-<div class="outline-text-3" id="text-orga674cd7">
+<div id="outline-container-orgb9c531c" class="outline-3">
+<h3 id="orgb9c531c">Package <code class="src src-R">here</code></h3>
+<div class="outline-text-3" id="text-orgb9c531c">
 <p>
 There are various methods, but a wonderfully easy one is:<br />
 </p>
@@ -832,9 +864,9 @@ my_plot <span class="org-ess-assignment">&lt;-</span> <span class="org-ess-funct
 </div>
 </div>
 
-<div id="outline-container-org1158aec" class="outline-2">
-<h2 id="org1158aec">Clean session</h2>
-<div class="outline-text-2" id="text-org1158aec">
+<div id="outline-container-org1813137" class="outline-2">
+<h2 id="org1813137">Clean session</h2>
+<div class="outline-text-2" id="text-org1813137">
 <div class="VERBATIM">
 <p>
 Never set anything that might change how your code runs<br />
@@ -854,9 +886,9 @@ In particular:<br />
 </div>
 </div>
 
-<div id="outline-container-org765d5cb" class="outline-2">
-<h2 id="org765d5cb">Formatting</h2>
-<div class="outline-text-2" id="text-org765d5cb">
+<div id="outline-container-org301a4b3" class="outline-2">
+<h2 id="org301a4b3">Formatting</h2>
+<div class="outline-text-2" id="text-org301a4b3">
 <p>
 There is no official R formatting. <a href="http://hadley.nz/">Hadley Wickham</a> wrote a <a href="http://style.tidyverse.org/">short book</a> on R formatting and this can be a great template to follow. A growing number of people are following his guidelines and it would be a good idea to familiarize yourself with them.<br />
 </p>
@@ -882,9 +914,9 @@ follow the style used by your collaborators, particularly if you edit their scri
 </div>
 </div>
 
-<div id="outline-container-org3bf1837" class="outline-2">
-<h2 id="org3bf1837">Things you do not want in a script</h2>
-<div class="outline-text-2" id="text-org3bf1837">
+<div id="outline-container-org528ec79" class="outline-2">
+<h2 id="org528ec79">Things you do not want in a script</h2>
+<div class="outline-text-2" id="text-org528ec79">
 <div class="VERBATIM">
 <p>
 Avoid anything that will make changes to a computer in your scripts<br />
@@ -899,6 +931,13 @@ If someone runs your script, this should not install packages or make any other 
 <div class="org-src-container">
 <pre class="src src-R"><span class="org-ess-function-call">install.packages</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span>
 </pre>
+</div>
+
+<div class="RED">
+<p>
+I owe these better coding habits to <a href="https://github.com/jennybc">Jenny Bryan</a> and <a href="http://hadley.nz/">Hadley Wickham</a>. Do not hesitate to look for their books, workshops, and other material that are very useful and open source.<br />
+</p>
+
 </div>
 </div>
 </div>
