--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-23 Thu 16:48 -->
+<!-- 2018-08-23 Thu 17:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -646,7 +646,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="/home/marie/.goldendict/favicons/email.ico" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="/home/marie/.goldendict/favicons/twitter.ico" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="/home/marie/.goldendict/favicons/gh.ico" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
+<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="r_workshop_international-ornithological-congress/images/email.ico" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="r_workshop_international-ornithological-congress/images/twitter.ico" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="r_workshop_international-ornithological-congress/images/gh.ico" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -654,19 +654,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org4630127">A. Program</a>
+<li><a href="#org1fb38bb">A. Program</a>
 <ul>
-<li><a href="#orgbb79623">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org109ea4b">2. Functional programming</a></li>
-<li><a href="#org116682a">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
+<li><a href="#org86f29e7">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org06751b3">2. Functional programming</a></li>
+<li><a href="#org66d394c">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
 </ul>
 </li>
-<li><a href="#orgdec15ce">B. Logistical considerations</a>
+<li><a href="#orga5194f7">B. Logistical considerations</a>
 <ul>
-<li><a href="#orgc77a042">Target audience</a></li>
-<li><a href="#org480a0e4">Where and when?</a></li>
-<li><a href="#org2b86a97">No fee nor registration</a></li>
-<li><a href="#orgd020c9d">Software requirements</a></li>
+<li><a href="#orgf271ec2">Target audience</a></li>
+<li><a href="#orgad0b7ff">Where and when?</a></li>
+<li><a href="#org14c9cf4">No fee nor registration</a></li>
+<li><a href="#orgd9329d2">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -680,13 +680,13 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org4630127" class="outline-2">
-<h2 id="org4630127">A. Program</h2>
-<div class="outline-text-2" id="text-org4630127">
+<div id="outline-container-org1fb38bb" class="outline-2">
+<h2 id="org1fb38bb">A. Program</h2>
+<div class="outline-text-2" id="text-org1fb38bb">
 </div>
-<div id="outline-container-orgbb79623" class="outline-3">
-<h3 id="orgbb79623">1. Portability, reproducibility, and readability</h3>
-<div class="outline-text-3" id="text-orgbb79623">
+<div id="outline-container-org86f29e7" class="outline-3">
+<h3 id="org86f29e7">1. Portability, reproducibility, and readability</h3>
+<div class="outline-text-3" id="text-org86f29e7">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -703,9 +703,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org109ea4b" class="outline-3">
-<h3 id="org109ea4b">2. Functional programming</h3>
-<div class="outline-text-3" id="text-org109ea4b">
+<div id="outline-container-org06751b3" class="outline-3">
+<h3 id="org06751b3">2. Functional programming</h3>
+<div class="outline-text-3" id="text-org06751b3">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -739,9 +739,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </div>
 </div>
 
-<div id="outline-container-org116682a" class="outline-3">
-<h3 id="org116682a">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
-<div class="outline-text-3" id="text-org116682a">
+<div id="outline-container-org66d394c" class="outline-3">
+<h3 id="org66d394c">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
+<div class="outline-text-3" id="text-org66d394c">
 <p>
 The workshop material can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_magrittr-bonus.html">here</a>.<br />
 </p>
@@ -749,13 +749,13 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgdec15ce" class="outline-2">
-<h2 id="orgdec15ce">B. Logistical considerations</h2>
-<div class="outline-text-2" id="text-orgdec15ce">
+<div id="outline-container-orga5194f7" class="outline-2">
+<h2 id="orga5194f7">B. Logistical considerations</h2>
+<div class="outline-text-2" id="text-orga5194f7">
 </div>
-<div id="outline-container-orgc77a042" class="outline-3">
-<h3 id="orgc77a042">Target audience</h3>
-<div class="outline-text-3" id="text-orgc77a042">
+<div id="outline-container-orgf271ec2" class="outline-3">
+<h3 id="orgf271ec2">Target audience</h3>
+<div class="outline-text-3" id="text-orgf271ec2">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -763,9 +763,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org480a0e4" class="outline-3">
-<h3 id="org480a0e4">Where and when?</h3>
-<div class="outline-text-3" id="text-org480a0e4">
+<div id="outline-container-orgad0b7ff" class="outline-3">
+<h3 id="orgad0b7ff">Where and when?</h3>
+<div class="outline-text-3" id="text-orgad0b7ff">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -774,18 +774,18 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org2b86a97" class="outline-3">
-<h3 id="org2b86a97">No fee nor registration</h3>
-<div class="outline-text-3" id="text-org2b86a97">
+<div id="outline-container-org14c9cf4" class="outline-3">
+<h3 id="org14c9cf4">No fee nor registration</h3>
+<div class="outline-text-3" id="text-org14c9cf4">
 <p>
 There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgd020c9d" class="outline-3">
-<h3 id="orgd020c9d">Software requirements</h3>
-<div class="outline-text-3" id="text-orgd020c9d">
+<div id="outline-container-orgd9329d2" class="outline-3">
+<h3 id="orgd9329d2">Software requirements</h3>
+<div class="outline-text-3" id="text-orgd9329d2">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
